lib/src/ffi.dart


final ImagingGetHistogram = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<NativeType> mask, Pointer<Uint8> extrema),
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<NativeType> mask, Pointer<Uint8> extrema)
>('ImagingGetHistogram');

final ImagingModeFilter = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 size),
  Pointer<NativeType> Function(Pointer<NativeType> im, int size)
>('ImagingModeFilter');

final ImagingNegative = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im),
  Pointer<NativeType> Function(Pointer<NativeType> im)
>('ImagingNegative');

final ImagingOffset = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 xoffset, Int32 yoffset),
  Pointer<NativeType> Function(Pointer<NativeType> im, int xoffset, int yoffset)
>('ImagingOffset');

final ImagingPaste = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> into, Pointer<NativeType> im, Pointer<NativeType> mask, Int32 x0, Int32 y0, Int32 x1, Int32 y1),
  int Function(Pointer<NativeType> into, Pointer<NativeType> im, Pointer<NativeType> mask, int x0, int y0, int x1, int y1)
>('ImagingPaste');

final ImagingPoint = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> tablemode, Pointer<Uint8> table),
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> tablemode, Pointer<Uint8> table)
>('ImagingPoint');

final ImagingPointTransform = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn, Double scale, Double offset),
  Pointer<NativeType> Function(Pointer<NativeType> imIn, double scale, double offset)
>('ImagingPointTransform');

final ImagingPutBand = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<NativeType> imIn, Int32 band),
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<NativeType> imIn, int band)
>('ImagingPutBand');

final ImagingRankFilter = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 size, Int32 rank),
  Pointer<NativeType> Function(Pointer<NativeType> im, int size, int rank)
>('ImagingRankFilter');

final ImagingRotate90 = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingRotate90');

final ImagingRotate180 = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingRotate180');

final ImagingRotate270 = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingRotate270');

final ImagingTranspose = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingTranspose');

final ImagingTransverse = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingTransverse');

final ImagingResample = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn, Int32 xsize, Int32 ysize, Int32 filter, Pointer<Float> box),
  Pointer<NativeType> Function(Pointer<NativeType> imIn, int xsize, int ysize, int filter, Pointer<Float> box)
>('ImagingResample');

final ImagingReduce = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn, Int32 xscale, Int32 yscale, Pointer<Int32> box),
  Pointer<NativeType> Function(Pointer<NativeType> imIn, int xscale, int yscale, Pointer<Int32> box)
>('ImagingReduce');

final ImagingTransform = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn, Int32 method, Int32 x0, Int32 y0, Int32 x1, Int32 y1, Pointer<Double> a, Int32 filter, Int32 fill),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn, int method, int x0, int y0, int x1, int y1, Pointer<Double> a, int filter, int fill)
>('ImagingTransform');

final ImagingUnsharpMask = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> im, Float radius, Int32 percent, Int32 threshold),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> im, double radius, int percent, int threshold)
>('ImagingUnsharpMask');

final ImagingBoxBlur = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn, Float radius, Int32 n),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn, double radius, int n)
>('ImagingBoxBlur');

final ImagingColorLUT3D_linear = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn, Int32 table_channels, Int32 size1D, Int32 size2D, Int32 size3D, Pointer<Int16> table),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn, int table_channels, int size1D, int size2D, int size3D, Pointer<Int16> table)
>('ImagingColorLUT3D_linear');

final ImagingCopy2 = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingCopy2');

final ImagingConvert2 = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingConvert2');

final ImagingChopLighter = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopLighter');

final ImagingChopDarker = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopDarker');

final ImagingChopDifference = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopDifference');

final ImagingChopMultiply = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopMultiply');

final ImagingChopScreen = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopScreen');

final ImagingChopAdd = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2, Float scale, Int32 offset),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2, double scale, int offset)
>('ImagingChopAdd');

final ImagingChopSubtract = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2, Float scale, Int32 offset),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2, double scale, int offset)
>('ImagingChopSubtract');

final ImagingChopAddModulo = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopAddModulo');

final ImagingChopSubtractModulo = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopSubtractModulo');

final ImagingChopSoftLight = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopSoftLight');

final ImagingChopHardLight = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopHardLight');

final ImagingOverlay = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingOverlay');

final ImagingChopAnd = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopAnd');

final ImagingChopOr = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopOr');

final ImagingChopXor = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingChopXor');

final ImagingCrack = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> im, Int32 x0, Int32 y0),
  void Function(Pointer<NativeType> im, int x0, int y0)
>('ImagingCrack');

final ImagingDrawArc = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Int32 x1, Int32 y1, Float start, Float end, Pointer<Uint8> ink, Int32 width, Int32 op),
  int Function(Pointer<NativeType> im, int x0, int y0, int x1, int y1, double start, double end, Pointer<Uint8> ink, int width, int op)
>('ImagingDrawArc');

final ImagingDrawBitmap = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Pointer<NativeType> bitmap, Pointer<Uint8> ink, Int32 op),
  int Function(Pointer<NativeType> im, int x0, int y0, Pointer<NativeType> bitmap, Pointer<Uint8> ink, int op)
>('ImagingDrawBitmap');

final ImagingDrawChord = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Int32 x1, Int32 y1, Float start, Float end, Pointer<Uint8> ink, Int32 fill, Int32 width, Int32 op),
  int Function(Pointer<NativeType> im, int x0, int y0, int x1, int y1, double start, double end, Pointer<Uint8> ink, int fill, int width, int op)
>('ImagingDrawChord');

final ImagingDrawEllipse = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Int32 x1, Int32 y1, Pointer<Uint8> ink, Int32 fill, Int32 width, Int32 op),
  int Function(Pointer<NativeType> im, int x0, int y0, int x1, int y1, Pointer<Uint8> ink, int fill, int width, int op)
>('ImagingDrawEllipse');

final ImagingDrawLine = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Int32 x1, Int32 y1, Pointer<Uint8> ink, Int32 op),
  int Function(Pointer<NativeType> im, int x0, int y0, int x1, int y1, Pointer<Uint8> ink, int op)
>('ImagingDrawLine');
